<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_item_share"
        android:title="share"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_a_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="80"
        app:showAsAction="never" />

    <item android:id="@+id/action_debug"
        android:title="@string/action_debug"
        android:visible="false"
        android:orderInCategory="85"
        app:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="90"
        app:showAsAction="never" />

    <item android:id="@+id/action_close"
        android:title="@string/action_close"
        android:orderInCategory="100"
        app:showAsAction="never" />


</menu>
